# rust-web-starter

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/app/: app.rs  state.rs
