[package]
name = "rust-web-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
strum = "0.26"
strum_macros = "0.26"
serde = "1"
serde_derive = "1"
gloo = "0.11"
bounce = "0.6"
log = "0.4"
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4.43"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement"]
